--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "David Kassa",
   "dependencies": {
     "@sendgrid/client": "^6.4.0",
+    "axios": "^0.19.0",
     "gatsby": "^2.13.7",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "http-proxy-middleware": "^0.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
