--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,4 @@
   functions = "functions"
 [template.environment]
   SENDGRID_API_KEY = "Your Sendgrid API Key (required for newsletter signup box)"
-  SENDGRID_WELCOME_SENDER_EMAIL = "Sendgrid Welcome Sender Email"
-  SENDGRID_WELCOME_SENDER_NAME = "Sendgrid Welcome Sender Name"
-  SENDGRID_WELCOME_TEMPLATE_ID = "Sendgrid Welcome Email Template ID"
+  SENDGRID_LIST_IDS = "An array of List IDs to add the new address to (optional)"
