--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@sendgrid/client": "^6.4.0",
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "gatsby": "^2.13.7",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.1",
